// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CriteriaSidebarSearchBar renders 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <div
      class="input-group-item"
    >
      <input
        aria-label="search-properties"
        class="form-control form-control-sm input-group-inset input-group-inset-after"
        data-testid="search-input"
        placeholder="search-properties"
        type="text"
        value=""
      />
      <div
        class="c-pr-0 input-group-inset-item input-group-inset-item-after"
      >
        <button
          aria-label="search-properties"
          class="mr-1 pr-2 btn btn-unstyled"
          data-testid="search-button"
          title="search-properties"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-search"
            role="presentation"
          >
            <use
              href="#search"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CriteriaSidebarSearchBar renders a button with a times icon when an input is entered 1`] = `
<button
  aria-label="clear-search"
  class="mr-1 pr-2 btn btn-unstyled"
  data-testid="search-button"
  title="clear-search"
  type="button"
>
  <svg
    class="lexicon-icon lexicon-icon-times"
    role="presentation"
  >
    <use
      href="#times"
    />
  </svg>
</button>
`;
